--- a/public/cadastro/index.html
+++ b/public/cadastro/index.html
@@ -134,7 +134,7 @@
                 class="w-full bg-[#00CDE9] text-white py-2 rounded-xl hover:bg-[#00bad1] transition-colors text-sm">Criar
                 Conta</button>
 
-            <a href="../login/index.html" class="block text-center text-sm text-[#00CDE9] hover:underline">Já tem uma
+            <a href="/" class="block text-center text-sm text-[#00CDE9] hover:underline">Já tem uma
                 conta? Entrar</a>
         </form>
     </div>
