--- a/public/login/index.html
+++ b/public/login/index.html
@@ -86,11 +86,11 @@
       </script>
 
       <div class="text-right">
-        <a href="#" class="text-sm text-[#00CDE9] hover:underline">Esqueceu a senha?</a>
+        <a href="/reset-password-page" class="text-sm text-[#00CDE9] hover:underline">Esqueceu a senha?</a>
       </div>
       <button type="submit"
         class="w-full bg-[#00CDE9] text-white py-2 rounded-xl hover:bg-[#00bad1] transition-colors text-sm">Entrar</button>
-      <a href="../cadastro/index.html" class="block text-center text-sm text-[#00CDE9] hover:underline">Não tem uma
+      <a href="/cadastro" class="block text-center text-sm text-[#00CDE9] hover:underline">Não tem uma
         conta? Cadastre-se</a>
     </form>
   </div>
