--- a/public/recupera/index.html
+++ b/public/recupera/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="relative text-white flex items-center justify-center min-h-screen bg-[#0f0f0f]">
   <div class="absolute inset-0 z-0">
-    <img src="assets/fundo.svg" alt="Fundo" class="w-full h-full object-cover opacity-10">
+    <img src="/assets/fundo.svg" alt="Fundo" class="w-full h-full object-cover opacity-10">
   </div>
 
   <div class="w-full max-w-md mx-4 p-6 bg-[#121212]/80 rounded-xl shadow-xl z-10">
@@ -17,7 +17,7 @@
         <h2 class="text-2xl font-bold">Recuperar Senha</h2>
         <p class="text-sm text-gray-400">Insira seus dados para receber um<br />código de verificação</p>
       </div>
-      <img src="assets/logo.png" alt="Logo" class="w-24">
+      <img src="/assets/logo.png" alt="Logo" class="w-24">
     </div>
 
     <div class="flex items-center justify-between mb-4 border-b border-[#00CDE9]">
@@ -58,7 +58,7 @@
     </form>
 
     <div id="verificacao" class="hidden text-center space-y-4">
-      <img src="assets/logo.png" alt="Logo" class="w-24 mx-auto">
+      <img src="/assets/logo.png" alt="Logo" class="w-24 mx-auto">
       <h2 class="text-xl font-bold">Autenticação de Dois Fatores</h2>
       <p class="text-sm text-gray-300">Digite o código de 6 dígitos enviado para seu email</p>
       <div class="flex justify-center gap-2">
