--- a/public/login/index.html
+++ b/public/login/index.html
@@ -22,7 +22,7 @@
         <h2 class="text-2xl font-bold">Entrar</h2>
         <p class="text-sm text-gray-400">Acesse sua conta existente</p>
       </div>
-      <img src="/assets/logo.png" alt="Logo" style="width: 30%;">
+      <img src="https://i.imgur.com/LrZVH8u.png" alt="Logo" style="width: 30%;">
     </div>
     <form class="space-y-4" id="loginForm">
       <div>
