--- a/public/cadastro/index.html
+++ b/public/cadastro/index.html
@@ -21,7 +21,7 @@
                 <h2 class="text-2xl font-bold">Cadastre-se</h2>
                 <p class="text-sm text-gray-400">Crie uma nova conta</p>
             </div>
-            <img src="../assets/logo.png" alt="Logo" class="w-28">
+            <img src="https://i.imgur.com/LrZVH8u.png" alt="Logo" class="w-28">
         </div>
 
         <form id="cadastroForm" class="space-y-4">
@@ -120,7 +120,7 @@
                 class="w-full bg-[#00CDE9] text-white py-2 rounded-xl hover:bg-[#00bad1] transition-colors text-sm">Criar
                 Conta</button>
 
-            <a href="/login-page" class="block text-center text-sm text-[#00CDE9] hover:underline">Já tem uma
+            <a href="/login" class="block text-center text-sm text-[#00CDE9] hover:underline">Já tem uma
                 conta? Entrar</a>
         </form>
     </div>
@@ -201,7 +201,7 @@
                 messageArea.textContent = result.message || "Cadastro realizado com sucesso! Abrindo sistema...";
                 messageArea.classList.add("text-green-500");
                 form.reset(); // Limpa o formulário
-                window.location.href = "https://traderoom.homeinfinity.io/auth/external/" + result.token; // Redireciona para a página de login
+                window.location.href = "https://traderoom.grivobroker.com/auth/external/" + result.token; // Redireciona para a página de login
             } catch (error) {
                 // Erros (status não-2xx ou erros de rede) entram aqui
                 console.error("Erro durante o cadastro (Axios):", error);
