--- a/public/cadastro/index.html
+++ b/public/cadastro/index.html
@@ -37,7 +37,7 @@
                         </svg>
                     </span>
                     <input type="text" name="name" placeholder="Digite seu nome completo"
-                        class="w-full pl-10 pr-3 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#00CDE9]">
+                        class="w-full pl-10 pr-3 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#fabf25]">
                 </div>
             </div>
 
@@ -52,7 +52,7 @@
                         </svg>
                     </span>
                     <input type="email" name="email" placeholder="Digite seu e-mail" required
-                        class="w-full pl-10 pr-3 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#00CDE9]">
+                        class="w-full pl-10 pr-3 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#fabf25]">
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                     </span>
                     <input type="tel" name="phone" placeholder="+5519998806611" required
                         pattern="^\+[1-9]\d{1,14}$" title="Inclua o DDI, exemplo: +5511999999999"
-                        class="w-full pl-10 pr-3 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#00CDE9]">
+                        class="w-full pl-10 pr-3 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#fabf25]">
                 </div>
             </div>
 
@@ -83,7 +83,7 @@
                         </svg>
                     </span>
                     <input id="senhaCadastro" type="password" name="password" placeholder="Digite sua senha" required
-                        class="w-full pl-10 pr-10 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#00CDE9]">
+                        class="w-full pl-10 pr-10 py-2 rounded-xl bg-gray-800 border border-gray-600 placeholder-gray-500 text-sm focus:outline-none focus:ring-2 focus:ring-[#fabf25]">
                     <button type="button" onclick="toggleSenhaCadastro()"
                         class="absolute inset-y-0 right-3 flex items-center text-gray-400">
                         <svg id="iconeOlhoCadastro" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none"
@@ -102,14 +102,14 @@
                 <label for="terms" class="relative flex items-center cursor-pointer">
                     <input type="checkbox" id="terms" name="terms" required class="peer sr-only">
                     <div
-                        class="w-5 h-5 rounded-md border border-[#00CDE9] peer-checked:bg-[#00CDE9] flex items-center justify-center transition-all">
+                        class="w-5 h-5 rounded-md border border-[#fabf25] peer-checked:bg-[#fabf25] flex items-center justify-center transition-all">
                         <svg class="w-3 h-3 text-white opacity-0 peer-checked:opacity-100 transition-opacity"
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7" />
                         </svg>
                     </div>
                 </label>
-                <label for="terms" class="text-xs md:text-sm"><a href="#" class="text-[#00CDE9] hover:underline">Eu
+                <label for="terms" class="text-xs md:text-sm"><a href="#" class="text-[#fabf25] hover:underline">Eu
                         aceito os Termos e Condições</a></label>
             </div>
 
@@ -117,10 +117,10 @@
             <div id="messageArea" class="text-sm text-center"></div>
 
             <button type="submit"
-                class="w-full bg-[#00CDE9] text-white py-2 rounded-xl hover:bg-[#00bad1] transition-colors text-sm">Criar
+                class="w-full bg-[#fabf25] text-black py-2 rounded-xl hover:bg-[#f2d383] transition-colors text-sm">Criar
                 Conta</button>
 
-            <a href="/login-page" class="block text-center text-sm text-[#00CDE9] hover:underline">Já tem uma
+            <a href="/login-page" class="block text-center text-sm text-[#fabf25] hover:underline">Já tem uma
                 conta? Entrar</a>
         </form>
     </div>
