--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br" class="scrollbar-thin scroll-smooth">
 
@@ -295,28 +296,28 @@
                     </div>
                     <div class="grid w-full grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-4">
                         <div class="flex w-full flex-col overflow-clip rounded-xl border border-neutral-300 bg-white text-black">
-                            <img alt="Payout acima de 90%" loading="lazy" src="/assets/images/diferenciais-01.webp" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Payout+90%25';">
+                            <img alt="Payout acima de 90%" loading="lazy" src="https://flow.hypeep.com/infinity/01.jpeg" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Payout+90%25';">
                             <div class="flex flex-col gap-2 px-4 py-6">
                                 <h3 class="text-lg font-medium sm:text-xl"> Payout acima de 90%</h3>
                                 <p class="text-neutral-700">Máximo retorno com um dos melhores payouts do mercado.</p>
                             </div>
                         </div>
                         <div class="flex w-full flex-col overflow-clip rounded-xl border border-neutral-300 bg-white text-black">
-                            <img alt="Saque imediato" loading="lazy" src="/assets/images/diferenciais-02.webp" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Saque+Imediato';">
+                            <img alt="Saque imediato" loading="lazy" src="https://flow.hypeep.com/infinity/02.jpeg" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Saque+Imediato';">
                             <div class="flex flex-col gap-2 px-4 py-6">
                                 <h3 class="text-lg font-medium sm:text-xl"> Saque imediato</h3>
                                 <p class="text-neutral-700">Retire seu saldo de forma rápida e sem burocracia.</p>
                             </div>
                         </div>
                         <div class="flex w-full flex-col overflow-clip rounded-xl border border-neutral-300 bg-white text-black">
-                            <img alt="Suporte humanizado" loading="lazy" src="/assets/images/diferenciais-03.webp" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Suporte';">
+                            <img alt="Suporte humanizado" loading="lazy" src="https://flow.hypeep.com/infinity/04.jpeg" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Suporte';">
                             <div class="flex flex-col gap-2 px-4 py-6">
                                 <h3 class="text-lg font-medium sm:text-xl"> Suporte humanizado</h3>
                                 <p class="text-neutral-700">Atendimento ágil e eficiente, sempre disponível.</p>
                             </div>
                         </div>
                         <div class="flex w-full flex-col overflow-clip rounded-xl border border-neutral-300 bg-white text-black">
-                            <img alt="Mercado real" loading="lazy" src="/assets/images/diferenciais-04.webp" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Mercado+Real';">
+                            <img alt="Mercado real" loading="lazy" src="https://flow.hypeep.com/infinity/03.jpeg" class="h-56 max-h-56 w-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/600x400/cccccc/000000?text=Mercado+Real';">
                             <div class="flex flex-col gap-2 px-4 py-6">
                                 <h3 class="text-lg font-medium sm:text-xl"> Mercado real</h3>
                                 <p class="text-neutral-700">TradingView e fluxo institucional.</p>
@@ -352,7 +353,7 @@
                         <div class="carousel-track -ml-3">
                             <div class="carousel-item min-w-0 shrink-0 grow-0 pl-3 basis-full sm:basis-1/2 md:basis-1/3 lg:basis-1/4">
                                 <div class="flex h-full w-full flex-col items-center justify-center overflow-clip rounded-xl border border-neutral-300 bg-neutral-50">
-                                    <img alt="Invista a qualquer hora" loading="lazy" src="/assets/images/beneficio-01.webp" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+1';">
+                                    <img alt="Invista a qualquer hora" loading="lazy" src="https://flow.hypeep.com/infinity/07.jpeg" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+1';">
                                     <div class="flex flex-1 flex-col gap-2 px-3 py-6">
                                         <h3 class="text-xl font-medium sm:text-2xl">Invista a qualquer hora</h3>
                                         <p class="text-neutral-700 md:text-lg">Operações disponíveis 24h por dia para você aproveitar as oportunidades do mercado.</p>
@@ -361,7 +362,7 @@
                             </div>
                             <div class="carousel-item min-w-0 shrink-0 grow-0 pl-3 basis-full sm:basis-1/2 md:basis-1/3 lg:basis-1/4">
                                 <div class="flex h-full w-full flex-col items-center justify-center overflow-clip rounded-xl border border-neutral-300 bg-neutral-50">
-                                    <img alt="Teste estratégias sem risco" loading="lazy" src="/assets/images/beneficio-02.webp" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+2';">
+                                    <img alt="Teste estratégias sem risco" loading="lazy" src="https://flow.hypeep.com/infinity/06.jpeg" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+2';">
                                     <div class="flex flex-1 flex-col gap-2 px-3 py-6">
                                         <h3 class="text-xl font-medium sm:text-2xl">Teste estratégias sem risco</h3>
                                         <p class="text-neutral-700 md:text-lg">Acesse com sua conta demo sem restrições para praticar e aprimorar suas habilidades.</p>
@@ -370,7 +371,7 @@
                             </div>
                             <div class="carousel-item min-w-0 shrink-0 grow-0 pl-3 basis-full sm:basis-1/2 md:basis-1/3 lg:basis-1/4">
                                 <div class="flex h-full w-full flex-col items-center justify-center overflow-clip rounded-xl border border-neutral-300 bg-neutral-50">
-                                    <img alt="150+ ativos globais" loading="lazy" src="/assets/images/beneficio-03.webp" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+3';">
+                                    <img alt="150+ ativos globais" loading="lazy" src="https://flow.hypeep.com/infinity/05.jpeg" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+3';">
                                     <div class="flex flex-1 flex-col gap-2 px-3 py-6">
                                         <h3 class="text-xl font-medium sm:text-2xl">150+ ativos globais</h3>
                                         <p class="text-neutral-700 md:text-lg">Invista em uma ampla variedade de ativos globais e expanda seu portfólio.</p>
@@ -379,7 +380,7 @@
                             </div>
                              <div class="carousel-item min-w-0 shrink-0 grow-0 pl-3 basis-full sm:basis-1/2 md:basis-1/3 lg:basis-1/4">
                                 <div class="flex h-full w-full flex-col items-center justify-center overflow-clip rounded-xl border border-neutral-300 bg-neutral-50">
-                                    <img alt="Comece com apenas R$60" loading="lazy" src="/assets/images/beneficio-04.webp" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+4';">
+                                    <img alt="Comece com apenas R$60" loading="lazy" src="https://flow.hypeep.com/infinity/08.jpeg" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+4';">
                                     <div class="flex flex-1 flex-col gap-2 px-3 py-6">
                                         <h3 class="text-xl font-medium sm:text-2xl">Comece com apenas R$60</h3>
                                         <p class="text-neutral-700 md:text-lg">Acessibilidade garantida: comece a operar com um valor inicial baixo.</p>
@@ -388,7 +389,7 @@
                             </div>
                             <div class="carousel-item min-w-0 shrink-0 grow-0 pl-3 basis-full sm:basis-1/2 md:basis-1/3 lg:basis-1/4">
                                 <div class="flex h-full w-full flex-col items-center justify-center overflow-clip rounded-xl border border-neutral-300 bg-neutral-50">
-                                    <img alt="Operações a partir de R$5" loading="lazy" src="/assets/images/beneficio-05.webp" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+5';">
+                                    <img alt="Operações a partir de R$5" loading="lazy" src="https://flow.hypeep.com/infinity/09.jpeg" class="h-72 w-full shrink-0 object-cover" onerror="this.onerror=null; this.src='https://placehold.co/400x300/cccccc/000000?text=Benefício+5';">
                                     <div class="flex flex-1 flex-col gap-2 px-3 py-6">
                                         <h3 class="text-xl font-medium sm:text-2xl">Operações a partir de R$5</h3>
                                         <p class="text-neutral-700 md:text-lg">Baixo custo de entrada para você começar a operar sem grandes investimentos.</p>
