--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br" class="scrollbar-thin scroll-smooth">
 
@@ -471,31 +470,7 @@
         <section id="nossos-resultados">
             <div class="relative w-full overflow-x-clip bg-neutral-50 text-black">
                 <div class="mx-auto flex max-w-7xl items-center justify-center gap-12 px-3 py-12 max-md:flex-col">
-                    <div class="flex w-full flex-col gap-6 sm:gap-12">
-                        <h2 class="text-2xl leading-tight font-medium max-sm:text-center sm:text-3xl md:text-5xl">Nossos resultados <br class="max-md:hidden"> falam por si: </h2>
-                        <div class="grid grid-cols-1 gap-6 border-y border-neutral-300 py-6 sm:grid-cols-2 md:py-12">
-                            <h3 class="flex w-full flex-col gap-1 max-sm:items-center max-sm:justify-center max-sm:text-center">
-                                <span class="flex items-center gap-1 text-xl font-medium sm:text-2xl md:text-3xl">+10 anos <i class="fas fa-external-link-alt text-sm"></i></span>
-                                <span class="text-neutral-700 sm:text-lg md:text-xl">com experiência consolidada.</span>
-                            </h3>
-                            <h3 class="flex w-full flex-col gap-1 max-sm:items-center max-sm:justify-center max-sm:text-center">
-                                <span class="flex items-center gap-1 text-xl font-medium sm:text-2xl md:text-3xl">+5 milhões <i class="fas fa-external-link-alt text-sm"></i></span>
-                                <span class="text-neutral-700 sm:text-lg md:text-xl">de traders nos escolheram.</span>
-                            </h3>
-                            <h3 class="flex w-full flex-col gap-1 max-sm:items-center max-sm:justify-center max-sm:text-center">
-                                <span class="flex items-center gap-1 text-xl font-medium sm:text-2xl md:text-3xl">+80 países <i class="fas fa-external-link-alt text-sm"></i></span>
-                                <span class="text-neutral-700 sm:text-lg md:text-xl">com presença global.</span>
-                            </h3>
-                            <h3 class="flex w-full flex-col gap-1 max-sm:items-center max-sm:justify-center max-sm:text-center">
-                                <span class="flex items-center gap-1 text-xl font-medium sm:text-2xl md:text-3xl">+10 milhões <i class="fas fa-external-link-alt text-sm"></i></span>
-                                <span class="text-neutral-700 sm:text-lg md:text-xl">em saques mensais.</span>
-                            </h3>
-                        </div>
-                        <a class="inline-flex items-center w-full md:w-fit enabled:cursor-pointer justify-center gap-1 whitespace-nowrap font-semibold transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary bg-amber-400 text-black hover:bg-amber-500/90 h-14 rounded-xl px-6" href="/cadastro">
-                            Se cadastre agora <i class="fas fa-external-link-alt shrink-0 origin-center ml-2"></i>
-                        </a>
-                    </div>
-                    <img alt="Nossos Números" loading="lazy" src="/assets/images/nossos-numeros.webp" class="pointer-events-none h-full w-full rounded-2xl object-cover max-sm:aspect-square md:max-h-[42rem] md:min-h-[42rem]" onerror="this.onerror=null; this.src='https://placehold.co/720x1080/cccccc/000000?text=Resultados';">
+                    <img alt="Nossos Números" loading="lazy" src="https://flow.hypeep.com/infinity/nr.jpeg" class="pointer-events-none h-full w-full rounded-2xl object-cover max-sm:aspect-square md:max-h-[42rem] md:min-h-[42rem]" onerror="this.onerror=null; this.src='https://placehold.co/720x1080/cccccc/000000?text=Resultados';">
                 </div>
             </div>
         </section>
